internal/adapters/flux/testdata/golden/managed-unpinned/apps/week-one/networkpolicy-allow-cluster-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cluster-egress
  namespace: week-one
  labels:
    d7s.dev/managed-by: d7s
    d7s.dev/stack: week-one
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 15012
    - to:
        - podSelector: {}
    - ports:
        - protocol: TCP
          port: 15008
